<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrasi"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="35dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text"/>

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_register"/>

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_register"/>

    <EditText
        android:id="@+id/confirm_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/konfirmasi_password"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_register"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrasi"
        android:textSize="24sp"
        android:background="@drawable/rounded_square_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/go_to_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/login_here_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:background="@color/white"
            android:textColor="@color/blue_primary"
            android:minHeight="0dp"
            android:minWidth="0dp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disini"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>