<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ToDoDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_to_do_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/details_to_do_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/judul"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_to_do_toolbar"/>

    <EditText
        android:id="@+id/details_to_do_begin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tanggal_mulai"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:focusable="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_to_do_title"/>

    <EditText
        android:id="@+id/details_to_do_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tanggal_berakhir"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:focusable="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_to_do_begin_date"/>

    <EditText
        android:id="@+id/details_to_do_description"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:hint="@string/deskripsi"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_background"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_to_do_end_date"/>

    <EditText
        android:id="@+id/details_to_do_assigned_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ditugaskan_kepada"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_to_do_description"/>

    <EditText
        android:id="@+id/details_to_do_assignee_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/grup_pemberi_tugas"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_to_do_assigned_to"/>

    <EditText
        android:id="@+id/details_to_do_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tingkat_kemajuan"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue_primary"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_to_do_assignee_group"/>

    <Button
        android:id="@+id/details_to_do_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textSize="24sp"
        android:background="@drawable/rounded_square_button"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>