<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_profile_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settings_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:src="@drawable/settings_icon"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:contentDescription="@string/ikon_pengaturan"
            android:focusable="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/user_profile_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textColor="@color/secondary_text"
        android:focusable="false"
        android:theme="@style/ProfileEditText"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_header"/>

    <EditText
        android:id="@+id/user_profile_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:theme="@style/ProfileEditText"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_id"/>

    <EditText
        android:id="@+id/user_profile_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:theme="@style/ProfileEditText"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_username"/>

    <EditText
        android:id="@+id/user_profile_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:theme="@style/ProfileEditText"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_email"/>

    <EditText
        android:id="@+id/user_profile_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/konfirmasi_password"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:theme="@style/ProfileEditText"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_password"/>

    <Button
        android:id="@+id/save_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textSize="24sp"
        android:background="@drawable/rounded_square_button"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/user_profile_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>