<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.JoinGroupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/join_group_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/join_group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_grup"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_group_toolbar"/>

    <EditText
        android:id="@+id/join_group_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_grup"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_group_id"/>

    <Button
        android:id="@+id/join_group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bergabung"
        android:textSize="24sp"
        android:background="@drawable/rounded_square_button"
        android:textColor="@color/white"
        android:layout_marginTop="165dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/join_group_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>