<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MemberDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/member_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/member_details_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="16sp"
        android:textColor="@color/secondary_text"
        android:focusable="false"
        android:layout_marginTop="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_details_toolbar"/>

    <Spinner
        android:id="@+id/member_details_status"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@drawable/spinner_background"
        android:layout_marginTop="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_details_username" />

    <Button
        android:id="@+id/member_details_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textSize="24sp"
        android:background="@drawable/rounded_square_button"
        android:textColor="@color/white"
        android:layout_marginTop="220dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/member_details_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/member_details_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hapus"
        android:textSize="24sp"
        android:background="@drawable/rounded_square_button"
        android:theme="@style/WarningButton"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/member_details_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
